[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MeasureDistancesAndAnglesOverlay"
version = "2024.0"
description = "Measure both distances and angles between particles and display them as an overlay in the viewport."
keywords = ["ovito", "ovito-extension"]
authors = [{name = "Daniel Utt", email = "utt@ovito.org"}]
maintainers = [{name = "Daniel Utt", email = "utt@ovito.org"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "ovito >= 3.9.3",
]

[project.urls]
repository = "https://github.com/ovito-org/DistancesAndAnglesOverlay"

[project.entry-points.'OVITO.ViewportOverlay']
"Measure distances and angles overlay" = "MeasureDistancesAndAnglesOverlay:MeasureDistancesAndAnglesOverlay"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:module 'sre_parse' is deprecated:DeprecationWarning",
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning",
]